--- a/Labs/Lab1 (CV)/SoftSkills.html
+++ b/Labs/Lab1 (CV)/SoftSkills.html
@@ -9,7 +9,7 @@
 </head>
 
     <section class="soft-skills">
-        <form action=".index.html">
+        <form action="index.html">
            <button <a href="index.html"></a>Back to the main</button>
         </form>
             <h1>Soft skills</h1>
