changed the code

--- a/Labs/Lab1 (CV)/TechSkills.html
+++ b/Labs/Lab1 (CV)/TechSkills.html
@@ -15,6 +15,7 @@
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
+                <li>Figma</li>
                 <li>Node.js</li>
                 <li>Programming languages: Python, C++, JavaScript.</li>
             </ul>
