--- a/Labs/Lab1 (CV)/TechSkills.html
+++ b/Labs/Lab1 (CV)/TechSkills.html
@@ -17,6 +17,7 @@ techskills.html
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
+                <li>Figma</li>
                 <li>Node.js</li>
                 <li>Programming languages: Python, C++, JavaScript.</li>
             </ul>
