--- a/Labs/Lab3 (Online Store)/cart.html
+++ b/Labs/Lab3 (Online Store)/cart.html
@@ -29,20 +29,20 @@
         </nav>
     </header>
 
-    <div class="products_section">
-        <div class="products_header">
-            <h4 class="product_name">Product</h4>
-            <h4 class="_size">Size</h4>
-            <h4 class="_quantity">Quantity</h4>
-            <h4 class="_price">Price</h4>
-            <h4 class="_total">TOTAL</h4>
+    <div class="products-container">
+        <div class="product-header">
+            <h4 class="product-title">Product</h4>
+            <h4 class="price">Price</h4>
+            <h4 class="quantity">Quantity</h4>
+            <h4 class="total">TOTAL</h4>
         </div>
         <div class="products">
-            
+            <p>there</p>
         </div>
     </div>
 
     <!-- <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script> -->
     <script src="src/js/main.js"></script>
+    
 </body>
 </html>
