--- a/Labs/Lab3 (Online Store)/index.html
+++ b/Labs/Lab3 (Online Store)/index.html
@@ -15,13 +15,13 @@
     <header>
         <div class="cover"></div>
         <nav>
-            <h1>Shopping</h1>
+            <h1><a href="#container">Shopping</a></h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li class="cart">
                     <a href="cart.html">
-                        <i class='bx bxs-cart-download bx-sm'></i><span>0</span>
+                        <i class='bx bxs-cart-download bx-sm'></i><span class="num">0</span>
                         <!-- <box-icon name='cart' size='lg'></box-icon> -->
                     </a>
                 </li>
@@ -29,7 +29,7 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container" id="#container">
         <div class="image">
             <img src="src/img/sneakers1.jpg" width="250px" height="180px" alt="sneakers1">
             <h3>First Sample </h3>
