--- a/Lab3 (Online Store)/cart.html
+++ b/Lab3 (Online Store)/cart.html
@@ -15,13 +15,13 @@
     <header>
         <div class="cover"></div>
         <nav>
-            <h1>Shopping</h1>
+            <h1><a href="index.html">Shopping</a></h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li class="cart">
                     <a href="cart.html">
-                        <i class='bx bxs-cart-download' size="lg"></i>
+                        <i class='bx bxs-cart-download bx-sm'></i><span class="num">0</span>
                         <!-- <box-icon name='cart' size='lg'></box-icon> -->
                     </a>
                 </li>
@@ -33,6 +33,7 @@
         <div class="product-header">
             <h4 class="product-title">Product</h4>
             <h4 class="price">Price</h4>
+            <!-- <h4 class="size">Size</h4> -->
             <h4 class="quantity">Quantity</h4>
             <h4 class="total">TOTAL</h4>
         </div>
